<resources>
    <string name="app_name" translatable="false">Tara</string>
    <string name="login" translatable="false">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="register_now">Register now</string>
    <string name="unlock">Unlock get help button, gratitude journal, affirmations and more features by logging in.</string>
    <string name="info_payment">To cover data storage and the service we provide you, as well as feed our developers (they become wild beasts without pizza and Coke 😂), we are forced to request a subscription fee from you. But, please, be assured we try our best to keep it as low as possible.</string>
    <string name="your_mail_address_ym_com" translatable="false">your-mail-address@ym.com</string>
    <string name="password">Password</string>
    <string name="min_12_glyphs">Min. 12 Glyphs</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="credit_card">Credit Card</string>
    <string name="quit">Quit</string>
    <string name="register">Register</string>
    <string name="tara" translatable="false">Tara</string>
    <string name="successfully_unlocked_features">You successfully unlocked all features: Animation screen with Get Help button, healthy positivity affirmations, gratitude journal, user statistics.</string>
    <string name="activate_get_help_button">To activate the get help button, you have to add an emergency contact in your profile.</string>
    <string name="get_help">Get Help</string>
    <string name="contact_informed">Contact was informed</string>
    <string name="my_gratitude_moment">My Gratitude Moment:</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="gratitude_data">Gratitude Data</string>
    <string name="no_emergency_contact_registered_yet">No emergency contact registered yet.</string>
    <string name="add_contact">Add Contact</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="settings">Settings</string>
    <string name="your_gratitude_notes_in_the_last_12_months">Your gratitude notes in the last 12 months</string>
    <string name="your_gratitude_notes_compared_to_past_30_days">Your gratitude notes compared to past 30 days</string>
    <string name="your_gratitude_note_activity">Your gratitude note activity</string>
    <string name="your_emergency_contact">Your Emergency Contact</string>
    <string name="add_avatar_image">Add avatar image</string>
    <string name="name" translatable="false">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="message">Message</string>
    <string name="push_messages">Push Messages</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="about">About</string>
    <string name="privacy">Privacy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="imprint">Imprint</string>
    <string name="contact">Contact</string>
    <string name="english" translatable="false">English</string>
    <string name="deutsch" translatable="false">Deutsch</string>
    <string name="im_augenblick_wird_die_deutsche_sprache_noch_nicht_unterst_tzt" translatable="false">Im Augenblick wird die deutsche Sprache noch nicht unterstützt. Wir werden dies alsbald möglich ändern.</string>
    <string name="is_my_data_safe">Is my data safe?</string>
    <string name="no_data_is_100_safe">No data is 100% safe, but we do our best to optimize the security of the app by encryption, not asking for obsolete data and provide you avatar pictures.</string>
    <string name="to_cover_data_storage">To cover data storage and the service we provide you, as well as feed our developers (they become wild beasts without pizza and Coke 😂), we are forced to request a subscription fee from you. But, please, be assured we try our best to keep it as low as possible.</string>
    <string name="back_button">back button</string>
    <string name="enter_the_name_of_your_contact">Enter the name of your contact</string>
    <string name="_01234567890" translatable="false">01234567890</string>
    <string name="write_here_your_emergency_message">Write here your emergency message</string>
    <string name="tap_picture_to_choose_another_avatar">Tap picture to choose another avatar</string>
    <string name="please_remember">Please remember that whenever you click the Get Help button, an SMS will be sent and you will incur charges from your mobile operator as a result.</string>
    <string name="terms_and_conditions_for_tara">Terms and Conditions for Tara</string>
    <string name="scope">Scope</string>
    <string name="these_terms_and_conditions_apply_to_the_use_of_the_tara_app_published_in_the_google_play_store">These terms and conditions apply to the use of the Tara app published in the Google Play Store.</string>
    <string name="conclusion_of_contract">Conclusion of Contract</string>
    <string name="usage_rights">Usage Rights</string>
    <string name="the_app_is_provided_to_the_user_solely_for_private_use_commercial_use_is_prohibited_unless_expressly_permitted">The app is provided to the user solely for private use. Commercial use is prohibited unless expressly permitted.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="data_protection">Data Protection</string>
    <string name="all_personal_data_of_the_user_will_be_treated_in_accordance_with_the_data_protection_guidelines_of_allgemeiner_gutachtenservice_schubau_ug">All personal data of the user will be treated in accordance with the data protection guidelines of Allgemeiner Gutachten Service Schubau UG.</string>
    <string name="subscription">Subscription</string>
    <string name="a_the_app_offers_a_subscription_model_users_can_choose_between_a_monthly_subscription_for_5_99_or_an_annual_subscription_for_50">a) The app offers a subscription model. Users can choose between a monthly subscription for €5.99 or an annual subscription for €50.</string>
    <string name="b_the_subscription_automatically_renews_unless_it_is_cancelled_at_least_24_hours_before_the_end_of_the_current_period">b) The subscription automatically renews unless it is cancelled at least 24 hours before the end of the current period.</string>
    <string name="c_payment_is_processed_through_the_google_play_store_upon_cancellation_of_the_subscription_access_remains_until_the_end_of_the_already_paid_period">c) Payment is processed through the Google Play Store. Upon cancellation of the subscription, access remains until the end of the already paid period.</string>
    <string name="d_refunds_for_already_paid_subscription_fees_are_excluded_unless_required_by_law">d) Refunds for already paid subscription fees are excluded unless required by law.</string>
    <string name="termination">Termination</string>
    <string name="changes_to_the_terms_and_conditions">Changes to the Terms and Conditions</string>
    <string name="final_provisions">Final Provisions</string>
    <string name="should_any_provision_of_these_terms_and_conditions_be_invalid_or_unenforceable_the_validity_of_the_remaining_provisions_shall_remain_unaffected">Should any provision of these terms and conditions be invalid or unenforceable, the validity of the remaining provisions shall remain unaffected.</string>
    <string name="privacy_policy_for_tara">Privacy Policy for Tara</string>
    <string name="general">General</string>
    <string name="this_privacy_policy_informs_you_about_the_type_scope_and_purpose_of_the_processing_of_personal_data_within_our_app_tara">This privacy policy informs you about the type, scope, and purpose of the processing of personal data within our app Tara.</string>
    <string name="type_of_data_collected">Type of Data Collected</string>
    <string name="we_collect_and_store_the_following_data">We collect and store the following data:</string>
    <string name="email_address_and_password_for_login">Email address and password for login</string>
    <string name="entries_text_date_image_stored_locally_on_the_device">Entries (text, date, image) – stored locally on the device</string>
    <string name="contact_information_name_mobile_number_message_stored_locally_on_the_device">Contact information (name, mobile number, message) – stored locally on the device</string>
    <string name="number_of_entries_per_day_stored_in_firestore">Number of entries per day – stored in Firestore</string>
    <string name="purpose_of_data_collection">Purpose of Data Collection</string>
    <string name="the_email_address_and_password_are_used_for_login_the_entries_serve_one_of_the_core_functions_of_the_app_the_gratitude_journal_the_contact_data_name_mobile_number_message_is_used_for_the_emergency_message_function_the_number_of_entries_is_stored_to_provide_the_user_with_an_overview_of_their_behavior_in_the_form_of_a_diagram">The email address and password are used for login. The entries serve one of the core functions of the app, the gratitude journal. The contact data (name, mobile number, message) is used for the emergency message function. The number of entries is stored to provide the user with an overview of their behavior in the form of a diagram.</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="data_is_not_passed_on_to_third_parties_unless_the_user_sends_a_message_via_the_app_themselves">Data is not passed on to third parties unless the user sends a message via the app themselves.</string>
    <string name="data_storage">Data Storage</string>
    <string name="entries_and_contact_data_are_stored_locally_on_the_user_s_device_login_data_is_stored_on_firebase_servers_in_germany_the_number_of_entries_is_stored_on_firestore_servers_in_the_eu">Entries and contact data are stored locally on the user\'s device. Login data is stored on Firebase servers in Germany. The number of entries is stored on Firestore servers in the EU.</string>
    <string name="cookies_and_tracking">Cookies and Tracking</string>
    <string name="we_use_firebase_analytics_and_crashlytics_to_monitor_the_performance_of_the_app">We use Firebase Analytics and Crashlytics to monitor the performance of the app.</string>
    <string name="exporting_entries">Exporting Entries</string>
    <string name="the_app_offers_users_the_option_to_export_their_entries_and_send_them_by_email_as_a_pdf_to_a_person_of_their_choice_after_successful_export_all_exported_entries_are_deleted_from_the_user_s_device">The app offers users the option to export their entries and send them by email as a PDF to a person of their choice. After successful export, all exported entries are deleted from the user\'s device.</string>
    <string name="use_of_external_apis">Use of External APIs</string>
    <string name="our_app_uses_the_unsplash_api_to_provide_random_images_and_a_self_developed_google_sheets_api_to_provide_quotes_when_using_these_apis_no_personal_data_of_the_user_is_transmitted_to_unsplash_or_google_sheets">Our app uses the Unsplash API to provide random images and a self-developed Google Sheets API to provide quotes. When using these APIs, no personal data of the user is transmitted to Unsplash or Google Sheets.</string>
    <string name="user_rights">User Rights</string>
    <string name="users_have_the_right_to_information_about_the_stored_data_as_well_as_the_right_to_deletion_of_this_data">Users have the right to information about the stored data as well as the right to deletion of this data.</string>
    <string name="for_questions_about_the_privacy_policy_or_your_rights_please_contact_ruth_schumacher_at_schubau_protonmail_com">For questions about the privacy policy or your rights, please contact Ruth Schumacher at schubau@protonmail.com.</string>
</resources>