<?xml version="1.0" encoding="utf-8"?>

<!-- Root layout that wraps the entire XML content. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Data binding section. Currently empty, but can be used to bind data to the layout. -->
    <data>
    </data>

    <!-- Main LinearLayout with a defined style. -->
    <LinearLayout
        style="@style/MainLayoutStyle"
        tools:context=".ui.EmergencyContactFragment"
        android:background="?attr/backgroundColor">

        <!-- Action bar layout containing back, home, and profile buttons. -->
        <LinearLayout
            style="@style/ActionBarStyle"
            android:layout_weight="1"
            android:background="?attr/backgroundColor">

            <!-- Back button to navigate to the previous screen. -->
            <ImageButton
                android:id="@+id/back_btn"
                style="@style/ActionBarButtonStyle"
                android:contentDescription="@string/back_button"
                android:src="@drawable/iconarrowback" />

            <!-- Home button with a logo. -->
            <ImageButton
                android:id="@+id/home_btn_logo"
                style="@style/ActionBarButtonStyle"
                android:contentDescription="@string/tara"
                android:src="@drawable/logo01"/>

            <!-- Text view associated with the home button. -->
            <TextView
                android:id="@+id/home_btn_text"
                style="@style/LogoTextViewStyle"
                android:text="@string/tara"
                tools:ignore="NestedWeights" />

            <!-- Profile button with a logo. Currently set to invisible. -->
            <ImageButton
                android:id="@+id/profile_btn_logo"
                style="@style/ActionBarButtonStyle"
                android:contentDescription="@string/tara"
                android:src="@drawable/iconprofile"
                android:visibility="invisible" />

        </LinearLayout>

        <!-- TextView to display the title or header for the emergency contact section. -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_emergency_contact"
            android:textAlignment="center" />

        <!-- ImageView to display the avatar or image of the emergency contact. -->
        <ImageView
            android:id="@+id/avatar_iv"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/avatar01" />

        <!-- Hint or instruction text below the avatar image. -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_picture_to_choose_another_avatar"
            android:textAlignment="center" />

        <!-- TextInputLayout for the name of the emergency contact. -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginHorizontal="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_name_of_your_contact"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- LinearLayout containing the country code picker and phone number input. -->
        <LinearLayout
            style="@style/HorizontalLayoutStyle">

            <!-- Country code picker for phone number input. -->
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />

            <!-- TextInputLayout for the phone number of the emergency contact. -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_01234567890"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- TextInputLayout for the emergency message that will be sent. -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginHorizontal="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="Emergency message"
            android:layout_weight="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_here_your_emergency_message"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- LinearLayout containing the quit and save buttons. -->
        <LinearLayout
            style="@style/HorizontalLayoutStyle"
            android:layout_marginBottom="80dp"
            android:layout_weight="1">

            <!-- Quit button to exit without saving changes. -->
            <Button
                android:id="@+id/quit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/quit" />

            <!-- Save button to save the changes made. -->
            <Button
                android:id="@+id/save_btn"
                style="@style/PrimaryButtonStyle"
                android:text="@string/save" />

        </LinearLayout>

        <!-- Information card view to provide additional details or warnings to the user. -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="32dp"
            android:backgroundTint="?attr/colorSecondary">

            <!-- Horizontal LinearLayout that wraps the information icon and text. -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                tools:ignore="UseCompoundDrawables">

                <!-- ImageView representing the information icon.
                     This icon serves as a visual indicator for the nature of the following text message. -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/iconexclamation"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/to_cover_data_storage" />

                <!-- TextView displaying the information message.
                     This message provides additional details or warnings to the user. -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_remember" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>
